# ankle_control

./: README.md  spring_calculations.py
ankle_control/: CMakeLists.txt  encoder.cpp
ankle_control/include/ankle_control/: encoder.h  force_sensor.h  servo.h
ankle_control/include/ankle_control/dynamixel_sdk/: port_handler.h  robotis_def.h
ankle_control/src/: controller.c  encoder.c  exec_test.c  force_sensor.c  servo.c  tiva_test.c
test_files/: linear_component_test_data.ipynb  spring_calculations.py
test_files/dynamixel_servo_teleop_control/manual_control/include/manual_control/control/: control_dyn.h
test_files/dynamixel_servo_teleop_control/manual_control/src/manual_control/: manual_control.cpp
test_files/dynamixel_servo_teleop_control/manual_control/src/manual_control/linux64/: Makefile  manual_control
test_files/foot_data/Test2/: Test2.Stop.csv
test_files/foot_data/Test3/: Test3.Stop.csv
test_files/foot_data/Test4/: Test4.Stop.csv
test_files/foot_data/Test5/: Test5.Stop.csv
test_files/foot_data/Test6/: Test6.Stop.csv
test_files/foot_data/Test7/: Test7.Stop.csv  Test7.im_gpf
test_files/foot_data/Test8/: Test8.Stop.csv
test_files/foot_data/Test9/: Test9.Stop.csv
test_files/linear_data/: LIZ-Can.ip_proj
test_files/linear_data/First Test/Test13/: Test13.Stop.csv
test_files/linear_data/First Test/Test15/: Test15.Stop.csv
test_files/linear_data/First Test/Test23/: Test23.Stop.csv
test_files/linear_data/First Test/Test26/: Test26.Stop.csv
test_files/linear_data/First Test/Test29/: Test29.Stop.csv
test_files/linear_data/First Test/Test32/: Test32.Stop.csv
test_files/linear_data/First Test/Test5/: Test5.Stop.csv
test_files/linear_data/First Test/Test8/: Test8.im_gpf
test_files/linear_data/Second Test/Test36/: Test36.Stop.csv
test_files/linear_data/Second Test/Test41/: Test41.Stop.csv
test_files/linear_data/Second Test/Test42/: Test42.Stop.csv
test_files/linear_data/Second Test/Test44/: Test44.Stop.csv
test_files/linear_data/Test1/: Test1.Stop.csv
test_files/linear_data/Test10/: Test10.Stop.csv
test_files/linear_data/Test11/: Test11.Stop.csv
test_files/linear_data/Test12/: Test12.Stop.csv
test_files/linear_data/Test14/: Test14.Stop.csv
test_files/linear_data/Test16/: Test16.Stop.csv
test_files/linear_data/Test2/: Test2.Stop.csv  Test2.im_gpf
test_files/linear_data/Test24/: Test24.Stop.csv
test_files/linear_data/Test25/: Test25.Stop.csv
test_files/linear_data/Test27/: Test27.Stop.csv
test_files/linear_data/Test28/: Test28.Stop.csv
test_files/linear_data/Test29/: Test29.im_gpf
test_files/linear_data/Test3/: Test3.Stop.csv
test_files/linear_data/Test30/: Test30.Stop.csv
test_files/linear_data/Test39/: Test39.Stop.csv
test_files/linear_data/Test4/: Test4.Stop.csv  Test4.im_gpf
test_files/linear_data/Test40/: Test40.Stop.csv
test_files/linear_data/Test42/: Test42.im_gpf
test_files/linear_data/Test43/: Test43.Stop.csv
test_files/linear_data/Test45/: Test45.Stop.csv
test_files/linear_data/Test5/: Test5.im_gpf
test_files/linear_data/Test6/: Test6.Stop.csv
test_files/linear_data/eval_data/: Test7.Stop.csv  Test8.Stop.csv  Test9.Stop.csv
